--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 216,
    "id": "c7036346",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 217,
    "id": "4cd65f70",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 218,
    "id": "e6104403",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "(2152863, 8)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 219,
    "id": "e6852f20",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "max         9.842891e+07  2.016000e+03  1.337756e+06  6.111000e+03  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 220,
    "id": "9809beeb",
    "metadata": {},
    "outputs": [
@@ -324,17 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 221,
    "id": "c5af8df6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test=df.isnull().sum()"
+    "nulls=df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 222,
    "id": "6d44163b",
    "metadata": {},
    "outputs": [
@@ -352,18 +352,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test"
+    "nulls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 223,
    "id": "2519c0ac",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
        "1797985  Single Family Residential  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 224,
    "id": "1e554129",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 225,
    "id": "a6daa1e8",
    "metadata": {},
    "outputs": [
@@ -648,9 +648,9 @@
        "      <td>2.0</td>\n",
        "      <td>3633.0</td>\n",
        "      <td>296425.0</td>\n",
-       "      <td>2005</td>\n",
+       "      <td>2005.0</td>\n",
        "      <td>6941.39</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -659,9 +659,9 @@
        "      <td>4.0</td>\n",
        "      <td>1620.0</td>\n",
        "      <td>847770.0</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>2011.0</td>\n",
        "      <td>10244.94</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -670,9 +670,9 @@
        "      <td>2.0</td>\n",
        "      <td>2077.0</td>\n",
        "      <td>646760.0</td>\n",
-       "      <td>1926</td>\n",
+       "      <td>1926.0</td>\n",
        "      <td>7924.68</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -681,9 +681,9 @@
        "      <td>0.0</td>\n",
        "      <td>1200.0</td>\n",
        "      <td>5328.0</td>\n",
-       "      <td>1972</td>\n",
+       "      <td>1972.0</td>\n",
        "      <td>91.60</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -692,9 +692,9 @@
        "      <td>0.0</td>\n",
        "      <td>171.0</td>\n",
        "      <td>6920.0</td>\n",
-       "      <td>1973</td>\n",
+       "      <td>1973.0</td>\n",
        "      <td>255.17</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -709,15 +709,15 @@
        "11         0.0          0.0                        1200.0             5328.0   \n",
        "14         0.0          0.0                         171.0             6920.0   \n",
        "\n",
-       "    yearbuilt  taxamount  fips        propertylandusedesc  \n",
-       "4        2005    6941.39  6037  Single Family Residential  \n",
-       "6        2011   10244.94  6037  Single Family Residential  \n",
-       "7        1926    7924.68  6037  Single Family Residential  \n",
-       "11       1972      91.60  6037  Single Family Residential  \n",
-       "14       1973     255.17  6037  Single Family Residential  "
+       "    yearbuilt  taxamount    fips        propertylandusedesc  \n",
+       "4      2005.0    6941.39  6037.0  Single Family Residential  \n",
+       "6      2011.0   10244.94  6037.0  Single Family Residential  \n",
+       "7      1926.0    7924.68  6037.0  Single Family Residential  \n",
+       "11     1972.0      91.60  6037.0  Single Family Residential  \n",
+       "14     1973.0     255.17  6037.0  Single Family Residential  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,53 +728,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 233,
    "id": "fd4d9615",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_r/wftd7dk93nj_hbzpqfw4vnsr0000gn/T/ipykernel_13224/2726372015.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['fips'] = df['fips'].apply(str)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['fips'] = df['fips'].apply(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 227,
    "id": "673e8508",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_r/wftd7dk93nj_hbzpqfw4vnsr0000gn/T/ipykernel_13224/3026168249.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['yearbuilt'] = df['yearbuilt'].apply(int)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['yearbuilt'] = df['yearbuilt'].apply(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 228,
    "id": "a2915801",
    "metadata": {},
    "outputs": [
@@ -792,7 +766,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 234,
    "id": "68272459",
    "metadata": {
     "scrolled": true
@@ -849,7 +823,7 @@
        "      <td>296425.0</td>\n",
        "      <td>2005</td>\n",
        "      <td>6941.39</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -860,7 +834,7 @@
        "      <td>847770.0</td>\n",
        "      <td>2011</td>\n",
        "      <td>10244.94</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -871,7 +845,7 @@
        "      <td>646760.0</td>\n",
        "      <td>1926</td>\n",
        "      <td>7924.68</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -882,7 +856,7 @@
        "      <td>5328.0</td>\n",
        "      <td>1972</td>\n",
        "      <td>91.60</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -893,7 +867,7 @@
        "      <td>6920.0</td>\n",
        "      <td>1973</td>\n",
        "      <td>255.17</td>\n",
-       "      <td>6037</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>Single Family Residential</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -908,15 +882,15 @@
        "11         0.0          0.0                        1200.0             5328.0   \n",
        "14         0.0          0.0                         171.0             6920.0   \n",
        "\n",
-       "    yearbuilt  taxamount  fips        propertylandusedesc  \n",
-       "4        2005    6941.39  6037  Single Family Residential  \n",
-       "6        2011   10244.94  6037  Single Family Residential  \n",
-       "7        1926    7924.68  6037  Single Family Residential  \n",
-       "11       1972      91.60  6037  Single Family Residential  \n",
-       "14       1973     255.17  6037  Single Family Residential  "
+       "    yearbuilt  taxamount    fips        propertylandusedesc  \n",
+       "4        2005    6941.39  6037.0  Single Family Residential  \n",
+       "6        2011   10244.94  6037.0  Single Family Residential  \n",
+       "7        1926    7924.68  6037.0  Single Family Residential  \n",
+       "11       1972      91.60  6037.0  Single Family Residential  \n",
+       "14       1973     255.17  6037.0  Single Family Residential  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 235,
    "id": "4a43eed4",
    "metadata": {},
    "outputs": [],
@@ -937,11 +911,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 236,
    "id": "1ef550c3",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>calculatedfinishedsquarefeet</th>\n",
+       "      <th>taxvaluedollarcnt</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>taxamount</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>propertylandusedesc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3633.0</td>\n",
+       "      <td>296425.0</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>6941.39</td>\n",
+       "      <td>06037.0</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1620.0</td>\n",
+       "      <td>847770.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>10244.94</td>\n",
+       "      <td>06037.0</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2077.0</td>\n",
+       "      <td>646760.0</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>7924.68</td>\n",
+       "      <td>06037.0</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>5328.0</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>91.60</td>\n",
+       "      <td>06037.0</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>171.0</td>\n",
+       "      <td>6920.0</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>255.17</td>\n",
+       "      <td>06037.0</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    bedroomcnt  bathroomcnt  calculatedfinishedsquarefeet  taxvaluedollarcnt  \\\n",
+       "4          4.0          2.0                        3633.0           296425.0   \n",
+       "6          3.0          4.0                        1620.0           847770.0   \n",
+       "7          3.0          2.0                        2077.0           646760.0   \n",
+       "11         0.0          0.0                        1200.0             5328.0   \n",
+       "14         0.0          0.0                         171.0             6920.0   \n",
+       "\n",
+       "    yearbuilt  taxamount     fips        propertylandusedesc  \n",
+       "4        2005    6941.39  06037.0  Single Family Residential  \n",
+       "6        2011   10244.94  06037.0  Single Family Residential  \n",
+       "7        1926    7924.68  06037.0  Single Family Residential  \n",
+       "11       1972      91.60  06037.0  Single Family Residential  \n",
+       "14       1973     255.17  06037.0  Single Family Residential  "
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "b73dd29b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['fips']=df['fips'].str[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "e42e22c6",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1050,7 +1156,7 @@
        "14       1973     255.17  06037  Single Family Residential  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 246,
    "id": "56baac6a",
    "metadata": {},
    "outputs": [
