finished scaling function

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -34,17 +34,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "9eeba049",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_data(df):\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "id": "5c84102c",
    "metadata": {
@@ -1211,6 +1200,124 @@
     "    \n",
     "    # Commas y-axis\n",
     "    x.yaxis.set_major_formatter(StrMethodFormatter('{x:,g}'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "1227e5d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_data(df):\n",
+    "    '''\n",
+    "        Accepts DataFrame from get_data() function in wrangle.py\n",
+    "            &\n",
+    "        Returns a cleaned DataFrame\n",
+    "    '''\n",
+    "    \n",
+    "    # Drop Nulls\n",
+    "    df = df.dropna()\n",
+    "    \n",
+    "    # Temporarily converts 'fips' column to interger to remove\n",
+    "    # trailing zeroes from current float type\n",
+    "    df['fips'] = df['fips'].apply(int)\n",
+    "    \n",
+    "    # Converts 'fips' column to string to target data type\n",
+    "    df['fips'] = df['fips'].apply(str)\n",
+    "    \n",
+    "    # Adds leading 'zero' character to 'fips' column\n",
+    "    df['fips'] = '0' + df['fips']\n",
+    "\n",
+    "    # Converts 'yearbuilt' column to interger\n",
+    "    df['yearbuilt'] = df['yearbuilt'].apply(int)\n",
+    "    \n",
+    "    # Method of removing last 2 strings in all columns\n",
+    "    #df['fips']=df['fips'].str[:-2]\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64f0020a",
+   "metadata": {},
+   "source": [
+    "# `wrangle.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d129aca6",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from env import get_db_url\n",
+    "from matplotlib.ticker import StrMethodFormatter\n",
+    "\n",
+    "def get_data(sql_db, query):\n",
+    "    url = get_db_url(sql_db)\n",
+    "\n",
+    "    df = pd.read_sql(query, url)\n",
+    "    df.to_csv(f'{sql_db}.csv')\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "def clean_data(df):\n",
+    "    '''\n",
+    "        Accepts DataFrame from get_data() function in wrangle.py\n",
+    "            &\n",
+    "        Returns a cleaned DataFrame\n",
+    "    '''\n",
+    "    \n",
+    "    # Drop Nulls\n",
+    "    df = df.dropna()\n",
+    "    \n",
+    "    # Temporarily converts 'fips' column to interger to remove\n",
+    "    # trailing zeroes from current float type\n",
+    "    df['fips'] = df['fips'].apply(int)\n",
+    "    \n",
+    "    # Converts 'fips' column to string to target data type\n",
+    "    df['fips'] = df['fips'].apply(str)\n",
+    "    \n",
+    "    # Adds leading 'zero' character to 'fips' column\n",
+    "    df['fips'] = '0' + df['fips']\n",
+    "\n",
+    "    # Converts 'yearbuilt' column to interger\n",
+    "    df['yearbuilt'] = df['yearbuilt'].apply(int)\n",
+    "    \n",
+    "    # Method of removing last 2 strings in all columns\n",
+    "    #df['fips']=df['fips'].str[:-2]\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "def wrangle_zillow():\n",
+    "    sql_db = \"zillow\"\n",
+    "    query = '''\n",
+    "            SELECT\n",
+    "                bedroomcnt,\n",
+    "                bathroomcnt,\n",
+    "                calculatedfinishedsquarefeet,\n",
+    "                taxvaluedollarcnt,\n",
+    "                yearbuilt,\n",
+    "                taxamount,\n",
+    "                fips,\n",
+    "                propertylandusedesc\n",
+    "            FROM \n",
+    "                properties_2017\n",
+    "                JOIN \n",
+    "                    propertylandusetype USING(propertylandusetypeid)\n",
+    "            WHERE \n",
+    "                propertylandusedesc = 'Single Family Residential';\n",
+    "            '''\n",
+    "    df=get_data(sql_db,query)\n",
+    "    return df\n",
+    "```"
    ]
   }
  ],
