--- a/feature_engineering_scratch.ipynb
+++ b/feature_engineering_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "7218f18b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "bdfbc995",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "620589d9",
    "metadata": {},
    "outputs": [],
@@ -65,12 +65,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "534b0a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>size</th>\n",
+       "      <th>price_per_person</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>total_bill</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.675734</td>\n",
+       "      <td>0.598315</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tip</th>\n",
+       "      <td>0.675734</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.489299</td>\n",
+       "      <td>0.675734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>size</th>\n",
+       "      <td>0.598315</td>\n",
+       "      <td>0.489299</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.598315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>price_per_person</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.675734</td>\n",
+       "      <td>0.598315</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  total_bill       tip      size  price_per_person\n",
+       "total_bill          1.000000  0.675734  0.598315          1.000000\n",
+       "tip                 0.675734  1.000000  0.489299          0.675734\n",
+       "size                0.598315  0.489299  1.000000          0.598315\n",
+       "price_per_person    1.000000  0.675734  0.598315          1.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "36520108",
    "metadata": {},
    "source": [
     "> ### Size seems most important for predicting `tip` amount"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7afaa8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
