update regression exercises

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "id": "cd0be522",
    "metadata": {},
    "outputs": [],
@@ -23,8 +23,8 @@
     "from env import *\n",
     "from wrangle import *\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "#import warnings\n",
+    "#warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "id": "aff9c67a",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 43,
    "id": "0fb035fa",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 44,
    "id": "b3cb4f71",
    "metadata": {
     "scrolled": true
@@ -90,7 +90,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 45,
    "id": "986a881a",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 56,
    "id": "ca95ada9",
    "metadata": {},
    "outputs": [],
@@ -125,18 +125,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "976f9d91",
+   "execution_count": 62,
+   "id": "407066b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Baseline Predictions\n",
-    "predictions['baseline_predictions']=(train[y].mean())"
+    "# Avoiding Pandas Slice Copy Errors\n",
+    "predictions = predictions.assign(baseline_predictions=train[y].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 20,
+   "id": "976f9d91",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Baseline Predictions\n",
+    "#predictions['baseline_predictions']=(train[y].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "ef114df1",
    "metadata": {},
    "outputs": [
@@ -182,7 +195,7 @@
        "785772                        2317.0           605000.0         460813.571707"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 70,
+   "id": "9cb68ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"predictions['yhat'] = ols_model.predict(train[[X]])\\n\""
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''predictions['yhat'] = ols_model.predict(train[[X]])\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "49bc477c",
    "metadata": {},
    "outputs": [],
@@ -202,12 +237,14 @@
     "# OLS Model\n",
     "ols_model = LinearRegression()\n",
     "ols_model.fit(train[[X]],train[[y]])\n",
-    "predictions['yhat'] = ols_model.predict(train[[X]])"
+    "\n",
+    "# Creating new column 'yhat' with Pandas .assign()\n",
+    "predictions = predictions.assign(yhat=ols_model.predict(train[[X]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 78,
    "id": "c023c82b",
    "metadata": {},
    "outputs": [
@@ -236,6 +273,7 @@
        "      <th>taxvaluedollarcnt</th>\n",
        "      <th>baseline_predictions</th>\n",
        "      <th>yhat</th>\n",
+       "      <th>baseline_res</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -245,6 +283,7 @@
        "      <td>605000.0</td>\n",
        "      <td>460813.571707</td>\n",
        "      <td>562892.639005</td>\n",
+       "      <td>-144186.428293</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -254,11 +293,11 @@
        "        calculatedfinishedsquarefeet  taxvaluedollarcnt  baseline_predictions  \\\n",
        "785772                        2317.0           605000.0         460813.571707   \n",
        "\n",
-       "                 yhat  \n",
-       "785772  562892.639005  "
+       "                 yhat   baseline_res  \n",
+       "785772  562892.639005 -144186.428293  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,18 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 76,
    "id": "a090330e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Baseline Residuals\n",
-    "predictions['baseline_res'] = (predictions['baseline_predictions'] - predictions[y])"
+    "\n",
+    "# Creating new column for Baseline Residuals 'baseline_res' using Pandas .assign()\n",
+    "predictions = predictions.assign(baseline_res=(predictions['baseline_predictions'] - predictions[y]))\n",
+    "\n",
+    "#predictions['baseline_res'] = (predictions['baseline_predictions'] - predictions[y])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 79,
    "id": "a764670a",
    "metadata": {
     "scrolled": false
@@ -383,7 +426,7 @@
        "1770814         460813.571707  264592.383956  298530.571707  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 80,
    "id": "909c306b",
    "metadata": {
     "scrolled": true
@@ -410,12 +453,17 @@
    "outputs": [],
    "source": [
     "# Prediction Residuals\n",
-    "predictions['yhat_res'] = predictions['yhat']-predictions[y]"
+    "\n",
+    "# Creating new column for Prediction Residuals 'yhat_res' using Pandas .assign()\n",
+    "predictions = predictions.assign(yhat_res=(predictions['yhat']-predictions[y]))\n",
+    "\n",
+    "# Old Method\n",
+    "#predictions['yhat_res'] = predictions['yhat']-predictions[y]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 82,
    "id": "2b780669",
    "metadata": {
     "scrolled": true
@@ -516,7 +564,7 @@
        "1770814         460813.571707  264592.383956  298530.571707  102309.383956  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 83,
    "id": "011ca986",
    "metadata": {},
    "outputs": [
@@ -552,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 84,
    "id": "f189de37",
    "metadata": {},
    "outputs": [
@@ -585,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 87,
    "id": "d4ea0228",
    "metadata": {},
    "outputs": [
@@ -616,8 +664,7 @@
     "\n",
     "# RMSE\n",
     "rmse_yhat = sqrt(mse_yhat)\n",
-    "print(f\"RMSE = {rmse_yhat}\")\n",
-    "tss = sse_yhat+ess_yhat"
+    "print(f\"RMSE = {rmse_yhat}\")"
    ]
   },
   {
@@ -630,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 88,
    "id": "691dd9ef",
    "metadata": {},
    "outputs": [
@@ -668,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 89,
    "id": "febc727c",
    "metadata": {},
    "outputs": [
@@ -678,7 +725,7 @@
        "True"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 91,
    "id": "1ac90fe5",
    "metadata": {},
    "outputs": [
@@ -736,6 +783,8 @@
     "tss_yhat = sse_yhat + ess_yhat\n",
     "\n",
     "ess_yhat / tss_yhat\n",
+    "\n",
+    "# Output\n",
     "print(f\"ESS = {sum((predictions['yhat'] - predictions[y].mean())**2)}\")\n",
     "display(Markdown(rf\"\"\"\n",
     "\n",
@@ -758,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 103,
    "id": "4375e4ae",
    "metadata": {
     "scrolled": true
@@ -775,14 +824,14 @@
    ],
    "source": [
     "# yhat variance\n",
-    "\n",
+    "evs_yhat=explained_variance_score(predictions[y],predictions['yhat'])\n",
     "print(\"-= SciKit Learn Function() =- \")\n",
-    "print(f\"explained_variance_score(yhat): {explained_variance_score(predictions[y],predictions['yhat'])}\")"
+    "print(f\"explained_variance_score(yhat): {evs_yhat}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 104,
    "id": "49f27023",
    "metadata": {},
    "outputs": [
@@ -797,9 +846,40 @@
    ],
    "source": [
     "# baseline variance\n",
-    "\n",
+    "evs_baseline=explained_variance_score(predictions[y],predictions['baseline_predictions'])\n",
     "print(\"-= SciKit Learn Function() =- \")\n",
-    "print(f\"explained_variance_score(Baseline): {explained_variance_score(predictions[y],predictions['baseline_predictions'])}\")"
+    "print(f\"explained_variance_score(Baseline): {evs_baseline}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "c9042426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evs_yhat > evs_baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ec8b7a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Yes"
    ]
   },
   {
@@ -832,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 94,
    "id": "3ee967e1",
    "metadata": {},
    "outputs": [],
@@ -852,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 95,
    "id": "07262b94",
    "metadata": {},
    "outputs": [
@@ -873,7 +953,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
+   "id": "494d1618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explained_variance_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "id": "696cf292",
    "metadata": {},
    "outputs": [],
@@ -891,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 97,
    "id": "8104376a",
    "metadata": {},
    "outputs": [],
@@ -901,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 99,
    "id": "799b3515",
    "metadata": {},
    "outputs": [],
@@ -918,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 100,
    "id": "cba673be",
    "metadata": {},
    "outputs": [],
@@ -928,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 101,
    "id": "2be4e8cb",
    "metadata": {},
    "outputs": [],
@@ -946,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 102,
    "id": "79deca37",
    "metadata": {},
    "outputs": [
